<resources>
    <string name="app_name"> Project1</string>
    <string name="helloworld"> Hello every body ! </string>
    <string name="name"> User Name </string>
    <string name="password"> Password </string>
    <string name="login"> LogIn </string>
    <string name="sologan">Hello ! Welcome language Adroi ! </string>
    <string name="button_click">Click me!</string>
    <string name="button_hihi">Hi hi Do ngoc! </string>

    <string name="facebook_sologan"> facebook </string>
    <string name="facebook_forgotPass">Forgot Password ?</string>
    <string name="facebook_signup">Sign Up for Facebook </string>
    <string name="email">Input Email </string>
    <string name="pass">Input Password </string>

    <string name="aaddb">A Add B</string>

    <string name="profile">Profile </string>
    <string name="gender"> Gender </string>
    <string name="gender_male"> Male </string>
    <string name="gender_female"> Female </string>

    <string name="hobby"> Hobby </string>
    <string name="hobby_1"> Make cooking </string>
    <string name="hobby_2">Reading book </string>
    <string name="hobby_3">Learn DJ </string>
    <string name="hobby_4">Painting </string>

    <string name="date_picker">Date Picker </string>
    <string name="time_picker">Time Picker </string>

    <string name="show_dialog">Show Dialog </string>
    <string name="show_alert_dialog">Show Alert Dialog! </string>
    <string name="dialog_content">Do you want logout?</string>
    <string name="yes">Yes </string>
    <string name="no">No </string>

    <string name="send_data">Send Data </string>
    <string name="input_username">Input User Name </string>
    <string name="input_password">Input Password </string>
    <string name="result"> Change Activity Success </string>

    <string name="send_data_receive_resutl">Test send Data receive Data </string>
    <string name="input_number_a">Input number A</string>
    <string name="input_number_b">Input number B</string>
    <string name="btn_result"> Result </string>

</resources>
