<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/edt_number_a"
        android:hint="@string/input_number_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edt_number_b"
        android:inputType="number"
        android:hint="@string/input_number_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_result"
        android:text="@string/btn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
