<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <RelativeLayout
       android:id="@+id/rl"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:id="@+id/imgLauncher"
           android:src="@mipmap/ic_launcher"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <TextView
           android:layout_toRightOf="@id/imgLauncher"
           android:text="@string/sologan"
           android:layout_centerInParent="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </RelativeLayout>

    <Button
        android:layout_centerInParent="true"
        android:layout_below="@id/rl"
        android:id="@+id/btnClick"
        android:text="@string/button_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_centerInParent="true"
        android:layout_below="@id/btnClick"
        android:text="@string/button_hihi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>